fix button placement on mobile

--- a/assets/styles/components/_newsletter.sass
+++ b/assets/styles/components/_newsletter.sass
@@ -32,6 +32,7 @@
     height: 38px
     position: absolute
     right: 0
+    top: 0
     border-top-right-radius: 5px
     border-bottom-right-radius: 5px
     padding: 10px 15px
